# PaperlessSmartReceipt_Rasberry

./: README.md
SmartReceipt/: CMakeCache.txt  CMakeLists.txt  Makefile  SmartReceipt  SmartReceipt copy.c.bak  SmartReceipt.c  cmake_install.cmake  pi_barcode.py
SmartReceipt/NxpNfcRdLib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
SmartReceipt/NxpNfcRdLib/comps/: CMakeLists.txt  Makefile  cmake_install.cmake
SmartReceipt/NxpNfcRdLib/comps/phCidManager/: Makefile  cmake_install.cmake
SmartReceipt/NxpNfcRdLib/comps/phCryptoRng/: Makefile  cmake_install.cmake
SmartReceipt/NxpNfcRdLib/comps/phCryptoSym/: Makefile  cmake_install.cmake
SmartReceipt/NxpNfcRdLib/comps/phKeyStore/: Makefile  cmake_install.cmake
SmartReceipt/NxpNfcRdLib/comps/phLog/: Makefile  cmake_install.cmake
SmartReceipt/NxpNfcRdLib/comps/phNfcLib/: CMakeLists.txt  Makefile  cmake_install.cmake
SmartReceipt/NxpNfcRdLib/comps/phOsal/: CMakeLists.txt  Makefile  cmake_install.cmake
SmartReceipt/NxpNfcRdLib/comps/phPlatform/: CMakeLists.txt  Makefile  cmake_install.cmake
SmartReceipt/NxpNfcRdLib/comps/phTools/: Makefile  cmake_install.cmake
SmartReceipt/NxpNfcRdLib/comps/phacDiscLoop/: CMakeLists.txt  Makefile  cmake_install.cmake
SmartReceipt/NxpNfcRdLib/comps/phalFelica/: Makefile  cmake_install.cmake
SmartReceipt/NxpNfcRdLib/comps/phalI15693/: Makefile  (+2 more)
SmartReceipt/NxpNfcRdLib/intfs/: phPlatform.h
SmartReceipt/NxpNfcRdLib/types/: ph_NxpBuild_Lpc.h
SmartReceipt/intfs/: SmartReceipt.h  cards.h  ph_NxpBuild_App.ref.txt
SmartReceipt/src/: cards.c  phApp_Init.c
(+265 files in other folders)
